// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userRoutes /users should throw an error with a status of 400: BadRequest when the req body doesn't pass validation 1`] = `
Object {
  "data": Array [
    Object {
      "message": "email must be a valid email",
      "path": "email",
    },
    Object {
      "message": "password must be at least 12 characters",
      "path": "password",
    },
    Object {
      "message": "Passwords don't match",
      "path": "confirmPassword",
    },
  ],
  "message": "Request has wrong format",
}
`;

exports[`userRoutes /users should throw an error with a status of 400: BadRequest when the req body doesn't pass validation 2`] = `
Object {
  "data": Array [
    Object {
      "message": "username is a required field",
      "path": "username",
    },
    Object {
      "message": "handle is a required field",
      "path": "handle",
    },
    Object {
      "message": "email is a required field",
      "path": "email",
    },
    Object {
      "message": "password is a required field",
      "path": "password",
    },
    Object {
      "message": "confirmPassword is a required field",
      "path": "confirmPassword",
    },
  ],
  "message": "Request has wrong format",
}
`;
